kymora-workflow v0.1 follow-ups: Task.Sources, services-to-Env, content-hashed sources, ParseError, WorkflowSpec, BLAKE3, Observer/Cli, JS link, mutex fix (#8)
* build: pin mainargs version in KymoraVersions

* build: scaffold kymora-workflow module (jvm/js/native, kyo on prod classpath)

* build: scaffold kymora-workflow-testkit module

* build: scaffold kymora-examples module (jvm-only, unpublished)

* feat(workflow): Validation primitive with Reason ADT

* feat(workflow): TaskId opaque type with runtime parser

* feat(workflow): TaskId compile-time literal macro

* feat(workflow): TaskScope opaque type with macro

* feat(workflow): TaskVersion with string-encoded Schema + kyo-test --add-opens

* feat(workflow): Fingerprint opaque type + Blake3 (jvm impl, js/native stubs)

* build: bump kyo snapshot to 1.0.0-RC2+139-715dffd7-SNAPSHOT

* feat(workflow): canonical Schema codec for stable hashing

* feat(workflow): expand ParseError sealed trait with Schema

* feat(workflow): Hashable typeclass with Schema-derived default

* feat(workflow): Cacheable typeclass with codec-parameterised encode/decode

* feat(workflow): VfsPathRef with vref: single-string wire format

* feat(workflow): VfsPathRef.of and .quick content hashing

* feat(workflow): Task sealed trait

* refactor(workflow): rename VfsPathRef to VPathRef to match VPath

* feat(workflow): Task.Cached + Task.init smart constructors (arities 0..2)

* feat(workflow): Task.init arities 3..6

* feat(workflow): Task.Persistent + Task.persistent smart constructors

* feat(workflow): Source kind with content/quick hashing modes

* feat(workflow): Input kind

* feat(workflow): Command kind + CommandContext + CliInvocation skeleton

* feat(workflow): Workflow.scope (compile-time literal) and Workflow.scopeWith (runtime)

* feat(workflow): WorkflowError, StoreError, CliParseError ADTs

* feat(workflow): TaskRecord + Runtime manifest types

* feat(workflow): CacheStore trait, CacheKey, StoredManifest

* feat(workflow): Vfs