@@ -7,8 +7,9 @@ import mill.scalanativelib.*
 import coursier.maven.MavenRepository
 
 object KymoraVersions:
-    /** Minimum required Kyo version. Later snapshot or stable releases are acceptable. */
-    val Kyo: String = "1.0.0-RC2+88-0059a365-SNAPSHOT"
+    /** Pinned Kyo snapshot. All Kyo modules ship at the same snapshot tag —
+      * pinned together here. */
+    val Kyo: String = "1.0.0-RC2+139-715dffd7-SNAPSHOT"
 
     /** Pinned scribe version for cross-platform logging (JVM + JS + Native). */
     val Scribe: String = "3.16.1"
@@ -80,6 +81,14 @@ trait KyoTestModule extends TestModule {
 
   override def testFramework: T[String] = "kyo.test.runner.SbtFramework"
 
+  // Kyo's schema derivation uses LambdaMetafactory against private fields in
+  // java.base, which JDK 17+ closes by default. Without --add-opens the
+  // derivation hangs (encode loop on first Schema construction) instead of
+  // failing cleanly. Apply to every kyo-test JVM run.
+  override def forkArgs: T[Seq[String]] = Task {
+    super.forkArgs() ++ Seq("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+  }
+
   override def mandatoryMvnDeps: T[Seq[Dep]] = Task {
     super.mandatoryMvnDeps() ++ Seq(
       // kyo-test-api/-runner declare the kyo effect modules as `provided`, so the
@@ -102,6 +111,14 @@ trait KyoTestNativeModule extends KyoTestModule {
 
 trait CommonScalaJSModule extends ScalaJSModule with scalafmt.ScalafmtModule {
   def scalaJSVersion = "1.21.0"
+
+  // CommonJSModule (default: NoModule). Required because kyo-core's
+  // `Path` Scala.js backend imports `node:path` and needs a real CJS
+  // `require`. NoModule output drops the import declarations and the
+  // linker refuses any code that reaches the Node path bindings —
+  // hits as soon as testkit's TestVfs.tempDir is referenced.
+  override def moduleKind: T[mill.scalajslib.api.ModuleKind] =
+    Task { mill.scalajslib.api.ModuleKind.CommonJSModule }
 }
 
 /** Scala.js module variant that emits a Wasm GC module instead of plain JS.
